fix(backend): resolve lambda final, convert sizes to Long, pass allowedAgentIds to property spec
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>